--- a/templates/catagories/vineyard.html
+++ b/templates/catagories/vineyard.html
@@ -29,102 +29,102 @@
     <div class="grid">
         <div class="grid-item">
             <video autoplay loop muted playsinline>
-                <source src="{{ url_for('static', filename='/img/vineyard/tractor.mp4') }}" type="video/mp4">
+                <source data-src="{{ url_for('static', filename='/img/vineyard/tractor.mp4') }}" type="video/mp4">
             </video>
         </div>  
         <div class="grid-item">
-            <img src="{{ url_for('static', filename='/img/vineyard/IMG_4189.jpg') }}">
+            <img data-src="{{ url_for('static', filename='/img/vineyard/IMG_4189.jpg') }}">
         </div> 
         <div class="grid-item">
             <video autoplay loop muted playsinline>
-                <source src="{{ url_for('static', filename='/img/vineyard/bees.webm') }}" type="video/webm">
-                <source src="{{ url_for('static', filename='/img/vineyard/bees.mp4') }}" type="video/mp4">
+                <source data-src="{{ url_for('static', filename='/img/vineyard/bees.webm') }}" type="video/webm">
+                <source data-src="{{ url_for('static', filename='/img/vineyard/bees.mp4') }}" type="video/mp4">
             </video>
         </div>  
         <div class="grid-item">
             <video autoplay loop muted playsinline>
-                <source src="{{ url_for('static', filename='/img/vineyard/compost.mp4') }}" type="video/mp4">
+                <source data-src="{{ url_for('static', filename='/img/vineyard/compost.mp4') }}" type="video/mp4">
             </video>
             </div>
             <div class="grid-item">
                 <video autoplay loop muted playsinline>
-                    <source src="{{ url_for('static', filename='/img/vineyard/grapes.mp4') }}" type="video/mp4">
+                    <source data-src="{{ url_for('static', filename='/img/vineyard/grapes.mp4') }}" type="video/mp4">
                 </video>
             </div>  
      
         <div class="grid-item">
-            <img src="{{ url_for('static', filename='/img/vineyard/IMG_0275.jpg') }}">
+            <img data-src="{{ url_for('static', filename='/img/vineyard/IMG_0275.jpg') }}">
         </div>
         <div class="grid-item">
             <video autoplay loop muted playsinline>
-                <source src="{{ url_for('static', filename='/img/vineyard/beekeeper.webm') }}" type="video/webm">
-                <source src="{{ url_for('static', filename='/img/vineyard/beekeeper.mp4') }}" type="video/mp4">
+                <source data-src="{{ url_for('static', filename='/img/vineyard/beekeeper.webm') }}" type="video/webm">
+                <source data-src="{{ url_for('static', filename='/img/vineyard/beekeeper.mp4') }}" type="video/mp4">
             </video>
             </div>
             <div class="grid-item">
                 <video autoplay loop muted playsinline>
-                    <source src="{{ url_for('static', filename='/img/vineyard/crane.webm') }}" type="video/webm">
-                    <source src="{{ url_for('static', filename='/img/vineyard/crane.mp4') }}" type="video/mp4">
+                    <source data-src="{{ url_for('static', filename='/img/vineyard/crane.webm') }}" type="video/webm">
+                    <source data-src="{{ url_for('static', filename='/img/vineyard/crane.mp4') }}" type="video/mp4">
                 </video>
             </div>  
 
         <div class="grid-item">
             <video autoplay loop muted playsinline>
-                <source src="{{ url_for('static', filename='/img/vineyard/tractor3_1.webm') }}" type="video/webm">
-                <source src="{{ url_for('static', filename='/img/vineyard/tractor3_1.mp4') }}" type="video/mp4">
+                <source data-src="{{ url_for('static', filename='/img/vineyard/tractor3_1.webm') }}" type="video/webm">
+                <source data-src="{{ url_for('static', filename='/img/vineyard/tractor3_1.mp4') }}" type="video/mp4">
             </video>
         </div>
         <div class="grid-item">
-            <img src="{{ url_for('static', filename='/img/vineyard/IMG_1423.jpg') }}">
+            <img data-src="{{ url_for('static', filename='/img/vineyard/IMG_1423.jpg') }}">
         </div>  
         <div class="grid-item">
             <video autoplay loop muted playsinline>
-                <source src="{{ url_for('static', filename='/img/vineyard/harvest.webm') }}" type="video/webm">
-                <source src="{{ url_for('static', filename='/img/vineyard/harvest.mp4') }}" type="video/mp4">
+                <source data-src="{{ url_for('static', filename='/img/vineyard/harvest.webm') }}" type="video/webm">
+                <source data-src="{{ url_for('static', filename='/img/vineyard/harvest.mp4') }}" type="video/mp4">
             </video>
         </div> 
         <div class="grid-item">
-            <img src="{{ url_for('static', filename='/img/vineyard/IMG_8291.jpg') }}">
+            <img data-src="{{ url_for('static', filename='/img/vineyard/IMG_8291.jpg') }}">
         </div>      
         <div class="grid-item">
-            <img src="{{ url_for('static', filename='/img/vineyard/IMG_3443.jpg') }}">
+            <img data-src="{{ url_for('static', filename='/img/vineyard/IMG_3443.jpg') }}">
         </div> 
         <div class="grid-item">
             <video autoplay loop muted playsinline>
-                <source src="{{ url_for('static', filename='/img/vineyard/signpainter.mp4') }}" type="video/mp4">
+                <source data-src="{{ url_for('static', filename='/img/vineyard/signpainter.mp4') }}" type="video/mp4">
             </video>
         </div>      
             
         <div class="grid-item">
-            <img src="{{ url_for('static', filename='/img/vineyard/IMG_6699.jpg') }}">
+            <img data-src="{{ url_for('static', filename='/img/vineyard/IMG_6699.jpg') }}">
         </div>      
          <div class="grid-item">
-            <img src="{{ url_for('static', filename='/img/vineyard/IMG_8177.jpg') }}">
+            <img data-src="{{ url_for('static', filename='/img/vineyard/IMG_8177.jpg') }}">
         </div>  
        
          <div class="grid-item">
-             <img src="{{ url_for('static', filename='/img/vineyard/IMG_8230.jpg') }}">
+             <img data-src="{{ url_for('static', filename='/img/vineyard/IMG_8230.jpg') }}">
         </div>
 
             <div class="grid-item">
                 <video autoplay loop muted playsinline>
                  
-                    <source src="{{ url_for('static', filename='/img/vineyard/tractor8.mp4') }}" type="video/mp4">
+                    <source data-src="{{ url_for('static', filename='/img/vineyard/tractor8.mp4') }}" type="video/mp4">
                 </video>
             </div>  
         <div class="grid-item">
-             <img src="{{ url_for('static', filename='/img/vineyard/IMG_8258.jpg') }}">
+             <img data-src="{{ url_for('static', filename='/img/vineyard/IMG_8258.jpg') }}">
         </div>
         <div class="grid-item">
-            <img src="{{ url_for('static', filename='/img/vineyard/IMG_1046.jpg') }}">
+            <img data-src="{{ url_for('static', filename='/img/vineyard/IMG_1046.jpg') }}">
         </div> 
         <div class="grid-item">
             <video autoplay loop muted playsinline>
-                <source src="{{ url_for('static', filename='/img/vineyard/harvest.mp4') }}" type="video/mp4">
+                <source data-src="{{ url_for('static', filename='/img/vineyard/harvest.mp4') }}" type="video/mp4">
             </video>
             </div>
        <div class="grid-item">
-            <img src="{{ url_for('static', filename='/img/vineyard/IMG_8716.jpg') }}">
+            <img data-src="{{ url_for('static', filename='/img/vineyard/IMG_8716.jpg') }}">
         </div> 
 </div>
 
@@ -160,7 +160,6 @@ window.onload = () => {
     });
 };
 
-// Lazy Load with reserved space to prevent shifting
 document.addEventListener("DOMContentLoaded", function () {
     const lazyImages = document.querySelectorAll('.grid-item img');
 
@@ -168,7 +167,8 @@ document.addEventListener("DOMContentLoaded", function () {
         entries.forEach(entry => {
             if (entry.isIntersecting) {
                 const img = entry.target;
-                img.src = img.dataset.src;
+                const src = img.dataset.src || img.src; // Use data-src, fallback to src
+                img.src = src;
                 img.onload = () => {
                     img.classList.add('loaded'); // Optional styling hook
                     observer.unobserve(img);
