--- a/templates/catagories/preserving.html
+++ b/templates/catagories/preserving.html
@@ -20,7 +20,7 @@
 
     <div class="hero-container">
     <div class="pagetitle">Preserving Food</div>
-    <img class="hero" data-src="{{ url_for('static', filename='/img/hero/HERO2.jpg') }}" alt="Preserving Food Image">
+    <img class="hero" src="{{ url_for('static', filename='/img/hero/HERO2.jpg') }}" alt="Preserving Food Image">
 </div>
 
 <div class="grid">
