--- a/templates/catagories/preserving.html
+++ b/templates/catagories/preserving.html
@@ -165,7 +165,7 @@
    // mainContent.style.display = 'block'; // Show the main content
 //});
 
-wwindow.onload = () => {
+window.onload = () => {
     const grid = document.querySelector('.grid');
     if (!grid) return;
 
@@ -242,7 +242,6 @@ document.addEventListener("DOMContentLoaded", function () {
         observer.observe(video);
     });
 });
-
 
 </script>
 </body>
