--- a/templates/catagories/preserving.html
+++ b/templates/catagories/preserving.html
@@ -7,7 +7,6 @@
     <link href="{{ url_for('static', filename='styles/base.css') }}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='styles/catagories/preserving.css') }}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='styles/catagories/catagory.css') }}" rel="stylesheet" />
-    <link href="{{ url_for('static', filename='styles/loading.css') }}" rel="stylesheet" />
 </head>
 
 
@@ -176,18 +175,9 @@ window.onload = () => {
 
     // Ensure all grid items have a reserved space
     document.querySelectorAll('.grid-item img, .grid-item video').forEach(item => {
-        if (item.complete) {
-            // Image is already loaded, set aspect ratio
-            const aspectRatio = item.naturalWidth / item.naturalHeight;
-            item.style.aspectRatio = aspectRatio ? `${aspectRatio} / 1` : "16 / 9";
-        } else {
-            // Image is not loaded yet, set aspect ratio on load
-            item.onload = () => {
-                const aspectRatio = item.naturalWidth / item.naturalHeight;
-                item.style.aspectRatio = aspectRatio ? `${aspectRatio} / 1` : "16 / 9";
-            };
-        }
-    });
+    item.style.width = "100%"; // Ensure they take the full width of their container
+    item.style.height = "auto"; // Maintain original proportions
+});
 
     // Load all images/videos before initializing Packery
     imagesLoaded(grid, function() {
