--- a/static/styles/catagories/preserving.css
+++ b/static/styles/catagories/preserving.css
@@ -26,6 +26,14 @@
   position: absolute;
   z-index: 1;
 }
+.grid {
+  position: relative; /* Required for Packery */
+  width: 100%; /* Full width of the container */
+  margin: 0 auto; /* Center the grid on the page */
+  z-index: 0;
+  min-height: 100vh;
+  padding-top: 0;
+}
 
 @media (max-width: 800px) {
   .pagetitle {
